tests/ui/resolve/suggestions/suggest-builder-fn.stderr
error[E0599]: no associated function or constant named `new` found for struct `TcpStream` in the current scope
  --> $DIR/suggest-builder-fn.rs:52:29
   |
LL |    let _stream = TcpStream::new();
   |                             ^^^ associated function or constant not found in `TcpStream`
   |
note: if you're trying to build a new `TcpStream` consider using one of the following associated functions:
      TcpStream::connect
      TcpStream::connect_timeout
  --> $SRC_DIR/std/src/net/tcp.rs:LL:COL

error[E0599]: the associated function or constant `new` exists for struct `Foo<u8>`, but its trait bounds were not satisfied
  --> $DIR/suggest-builder-fn.rs:57:27
   |
LL | struct Foo<T> {
   | ------------- associated function or constant `new` not found for this struct
...
LL |     let _foo = Foo::<u8>::new();
   |                           ^^^ associated function or constant cannot be called on `Foo<u8>` due to unsatisfied trait bounds
   |
note: trait bound `u8: SomeTrait` was not satisfied
  --> $DIR/suggest-builder-fn.rs:12:9
   |
LL | impl<T: SomeTrait + Default> Foo<T> {
   |         ^^^^^^^^^            ------
   |         |
   |         unsatisfied trait bound introduced here

error[E0599]: no associated function or constant named `new` found for struct `Bar` in the current scope
  --> $DIR/suggest-builder-fn.rs:62:21
   |
LL | struct Bar;
   | ---------- associated function or constant `new` not found for this struct
...
LL |     let _bar = Bar::new();
   |                     ^^^ associated function or constant not found in `Bar`
   |
note: if you're trying to build a new `Bar` consider using one of the following associated functions:
      Bar::build
      SomeMod::<impl Bar>::build_public
  --> $DIR/suggest-builder-fn.rs:23:5
   |
LL |     fn build() -> Self {
   |     ^^^^^^^^^^^^^^^^^^
...
LL |         pub fn build_public() -> Self {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
